@@ -141,7 +141,7 @@
 		buildOptionsBar: function(elems){
 			this.findStates();
 			var self=this;
-			$(elems).append('<div id="pp_options"><ul></ul></div>');
+			$(elems).append('<div id="pp_options"><p>Page States:</p><ul></ul></div>');
 			
 			var alphaStates = this.alphabeticalStateNames();
 			
